cmake_minimum_required( VERSION 3.0 )
project( algorithms_and_datastructure )

add_subdirectory( huffman_tree )
add_subdirectory( trie_tree )
add_subdirectory( BST )
add_subdirectory( red_black_tree )
add_subdirectory( AVL_tree )
add_subdirectory( sort )
add_subdirectory( graph_basic )
add_subdirectory( topological_sorting )
add_subdirectory( Kruskal )
add_subdirectory( Prim )
add_subdirectory( Dijkstra )
add_subdirectory( AStar )